# Test-preparation-01

./: CMakeLists.txt  GUI.cpp  GUI.h  Object.cpp  Object.h  Objects.txt  Repository.cpp  Repository.h  Service.cpp  Service.h  main.cpp
